# ODF

./: .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE  README.md  hello.py  pyproject.toml
docs/: case-study-adapt.odf  case-study.odf  odf-example.odf  odglog-example.odgl
docs/example_dots/: mrs_vars.dot  mrs_vars_all_vars.dot
lib/pycudd2.0.2/cudd-2.4.2/: Makefile
lib/pycudd2.0.2/pycudd/: Makefile  ddmanager.i  ddnode.i  docstring.h  example2.py  example3.py  pycudd.i  pyiter.i  test4.py  utils.i
odf/: __main__.py
odf/checker/: checker.py  exceptions.py
odf/checker/layer1/: check_layer1.py  layer1_bdd.py
odf/core/: constants.py  exceptions.py  types.py
odf/models/: disruption_tree.py  exceptions.py  network_graph.py  object_graph.py  tree_graph.py  validation.py
odf/parser/: grammar.lark  parser.py
odf/transformers/: configuration.py  disruption_tree.py  exceptions.py  object_graph.py  prob_evidence_prepass.py
odf/utils/: dfs.py  dot.py  formatting.py  logger.py  reconstructor.py
src/: main.py
src/models/: disruption_tree.py  network_graph.py  object_graph.py
src/parser/: grammar.lark
src/transformers/: disruption_tree.py  exceptions.py  object_graph.py
tests/: conftest.py  test_case_study.py
tests/checker/: test_layer2.py
tests/models/: test_disruption_tree.py  test_validation.py
tests/parser/: conftest.py  test_grammar.py  test_parse_tree.py
tests/transformers/: test_configuration.py  test_disruption_tree.py  test_object_graph.py
tests/trycudd/: test_dd.py
tests/utils/: test_dfs.py  test_reconstructor.py
(+14 files in other folders)
