[project]
name = "odf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dd",
    "lark>=1.2.2",
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "wurlitzer>=3.1.1",
]

[tool.uv.sources]
dd = { git = "https://github.com/CazSaa/dd.git", branch = "algebraic_cudd" }
