[project]
name = "odf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "networkx>=3.4.2",
]

[dependency-groups]
build = [
    "cython>=3.0.12",
    "wheel>=0.45.1",
    "setuptools>=75.8.2",
]
compile = [
    "dd",
]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.uv]
no-build-isolation-package = ["dd"]

[tool.uv.sources]
dd = { git = "https://github.com/CazSaa/dd.git", branch = "develop" }
